Parse message content as a byte array in request entities